--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Dario's Site</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Dario Tino</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Hello, I'm Dario!</h1>
-  <p>This is my personal website. Stay tuned for more!</p>
+  <header>
+    <nav class="navbar">
+      <div class="logo">DARIO TINO</div>
+      <ul class="nav-links">
+        <li><a href="#about">ABOUT ME</a></li>
+        <li><a href="#projects">PROJECTS</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h1>About Me</h1>
+      <p>Hi, I’m Dario. Welcome to my personal site! 🚀</p>
+    </section>
+
+    <section id="projects">
+      <h1>Projects</h1>
+      <p>Here you'll find a showcase of the things I've built.</p>
+    </section>
+  </main>
 
   <script src="script.js"></script>
 </body>
