Add Apple-style navigation bar

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dario Tino</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <nav class="navbar">
+    <nav>
       <div class="logo">DARIO TINO</div>
-      <ul class="nav-links">
+      <ul>
         <li><a href="#about">ABOUT ME</a></li>
         <li><a href="#projects">PROJECTS</a></li>
       </ul>
