Add hero image layout

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dario Tino</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+  <header class="navbar">
+    <div class="logo">DARIO TINO</div>
     <nav>
-      <div class="logo">DARIO TINO</div>
       <ul>
         <li><a href="#about">ABOUT ME</a></li>
         <li><a href="#projects">PROJECTS</a></li>
@@ -17,17 +17,9 @@
     </nav>
   </header>
 
-  <main>
-    <section id="about">
-      <h1>About Me</h1>
-      <p>Hi, I’m Dario. Welcome to my personal site! 🚀</p>
-    </section>
-
-    <section id="projects">
-      <h1>Projects</h1>
-      <p>Here you'll find a showcase of the things I've built.</p>
-    </section>
-  </main>
+  <section class="hero-image">
+    <!-- This area will show the full image -->
+  </section>
 
   <script src="script.js"></script>
 </body>
