--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="#about">ABOUT ME</a></li>
-        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#projects">PROJECTS TEST</a></li>
       </ul>
     </nav>
   </header>
