Show hero image

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     </nav>
   </header>
 
-  <section class="hero-image">
-    <!-- This area will show the full image -->
-  </section>
+<section class="hero-image">
+  <img src="hero-image.JPG" alt="Hero Image" />
+</section>
+
 
   <script src="script.js"></script>
 </body>
