Add hero image and update index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
 <section class="hero-image">
-  <img src="hero-image.JPG" alt="Hero Image" />
+  <img src="hero-image.png" alt="Floating 3D Logos" />
 </section>
 
 
