Updated background and fixed navbar spacing

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </nav>
   </header>
 
-  <section class="hero-image">
-    <img src="hero-image.png" alt="Floating 3D Logos" class="floating-logo" />
-  </section>
+  <div class="hero-background"></div>
 
   <script src="script.js"></script>
 </body>
