Add 3D parallax animation with separate layers

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dario Tino</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header class="navbar">
     <div class="logo">DARIO TINO</div>
     <nav>
@@ -17,7 +18,11 @@
     </nav>
   </header>
 
-  <div class="hero-background"></div>
+  <div class="parallax-container">
+    <img src="link-logo.png" class="parallax-layer layer-link" />
+    <img src="@apple-logo.png" class="parallax-layer layer-apple" />
+    <img src="beskou-logo.png" class="parallax-layer layer-beskou" />
+  </div>
 
   <script src="script.js"></script>
 </body>
