Add 3D parallax animation with separate layers

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dario Tino</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -18,12 +18,12 @@
     </nav>
   </header>
 
-<div class="parallax-container">
-  <img src="link-logo.png" class="parallax-layer layer-link" />
-  <img src="@apple-logo.png" class="parallax-layer layer-apple" />
-  <img src="beskou-logo.png" class="parallax-layer layer-beskou" />
-</div>
+  <div class="hero-container">
+    <img src="hero-stack.png" class="hero-image" alt="3D logo stack" />
+  </div>
 
+  <!-- Placeholder for content below -->
+  <section style="height: 200vh;"></section>
 
   <script src="script.js"></script>
 </body>
