--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header class="navbar">
     <div class="logo">DARIO TINO</div>
     <nav>
@@ -19,10 +18,10 @@
   </header>
 
   <div class="hero-container">
-    <img src="hero-stack.png" class="hero-image" alt="3D logo stack" />
+    <img src="hero-image.png" class="hero-image" alt="3D logo stack" />
   </div>
 
-  <!-- Placeholder for content below -->
+  <!-- Dummy content to enable scroll -->
   <section style="height: 200vh;"></section>
 
   <script src="script.js"></script>
