Fix hero image and nav text cutoff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <div class="hero-container">
-    <img src="hero-image.png" class="hero-image" alt="3D logo stack" />
+<img src="@apple-logo.png" class="hero-image" alt="3D logo stack" />
   </div>
 
   <!-- Dummy content to enable scroll -->
