Enable 3D logo parallax effect

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
   </header>
 
   <div class="hero-container">
-<img src="@apple-logo.png" class="hero-image" alt="3D logo stack" />
+    <img src="link-logo.png" class="hero-image layer layer1" alt="Link Logo" />
+    <img src="@apple-logo.png" class="hero-image layer layer2" alt="@Apple Logo" />
+    <img src="beskou-logo.png" class="hero-image layer layer3" alt="Beskou Logo" />
   </div>
 
-  <!-- Dummy content to enable scroll -->
+  <!-- Dummy scrollable space -->
   <section style="height: 200vh;"></section>
 
   <script src="script.js"></script>
