Fix image layers and spacing with parallax

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     </nav>
   </header>
 
-  <div class="hero-container">
-    <img src="link-logo.png" class="hero-image layer layer1" alt="Link Logo" />
-    <img src="@apple-logo.png" class="hero-image layer layer2" alt="@Apple Logo" />
-    <img src="beskou-logo.png" class="hero-image layer layer3" alt="Beskou Logo" />
-  </div>
+<div class="hero-container">
+  <img src="link-logo.png" class="hero-image layer layer-1" alt="Link logo" />
+  <img src="@apple-logo.png" class="hero-image layer layer-2" alt="Apple logo" />
+  <img src="beskou-logo.png" class="hero-image layer layer-3" alt="Beskou logo" />
+</div>
+
 
   <!-- Dummy scrollable space -->
   <section style="height: 200vh;"></section>
