Fix parallax layout, spacing, and scroll limits

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   </header>
 
   <div class="hero-container">
-    <img src="link-logo.png" class="hero-image layer layer-1" alt="Link logo" />
-    <img src="@apple-logo.png" class="hero-image layer layer-2" alt="Apple logo" />
-    <img src="beskou-logo.png" class="hero-image layer layer-3" alt="Beskou logo" />
+    <img src="link-logo.png" class="layer layer-1" alt="Link logo" />
+    <img src="@apple-logo.png" class="layer layer-2" alt="Apple logo" />
+    <img src="beskou-logo.png" class="layer layer-3" alt="Beskou logo" />
   </div>
 
-  <section style="height: 120vh;"></section>
+  <section style="height: 40vh;"></section>
 
   <script src="script.js"></script>
 </body>
