Update about page layout and portrait

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="logo">DARIO TINO</div>
     <nav>
       <ul>
-        <li><a href="#about">ABOUT ME</a></li>
-        <li><a href="#projects">PROJECTS</a></li>
+<li><a href="about.html">ABOUT ME</a></li>
+<li><a href="projects.html">PROJECTS</a></li>
       </ul>
     </nav>
   </header>
