Deploy latest site version

--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me – Dario Tino</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
   <header class="navbar">
@@ -25,8 +24,7 @@
         I'm a 20-year-old entrepreneur from the Principality of Liechtenstein.
         Passionate about innovation, technology, and making ideas real.
         I believe in building with purpose and thinking beyond borders.
-        Since August 2024, I’ve been working at Apple — pushing boundaries and
-        learning from the best in the industry.
+        Since August 2024, I’ve been working at Apple — pushing boundaries and learning from the best in the industry.
       </p>
     </div>
     <div class="about-image-wrapper">
