Fix JS syntax for parallax

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@ document.addEventListener("scroll", () => {
   const scrollY = window.scrollY;
   document.querySelectorAll(".parallax").forEach(el => {
     const speed = parseFloat(el.dataset.speed);
-    el.style.transform = `translate(-50%, ${scrollY * speed}px)`;
+    el.style.transform = `translate(-50%, ${scrollY * speed}px)`; // ✅ fixed
   });
 });
 </script>
+
 
 
 
