--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@ function updateParallax() {
   ticking = false;
 }
 
-document.addEventListener("scroll", () => {
+window.addEventListener("scroll", () => {
   if (!ticking) {
     window.requestAnimationFrame(updateParallax);
     ticking = true;
   }
-});
+}, { passive: true }); // ✅ important for mobile
 </script>
+
 
 
 
