--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="logo"><a href="index.html">DARIO TINO</a></div>
     <nav>
       <ul>
-        <li><a href="about.html">ABOUT ME</a></li>
+        <li><a href="about.html">ABOUT - ME</a></li>
         <li><a href="projects.html">PROJECTS</a></li>
       </ul>
     </nav>
