--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="logo"><a href="index.html">DARIO TINO</a></div>
     <nav>
       <ul>
-        <li><a href="about.html">ABOUT - ME</a></li>
+        <li><a href="about.html">ABOUT 1 ME</a></li>
         <li><a href="projects.html">PROJECTS</a></li>
       </ul>
     </nav>
@@ -38,7 +38,7 @@ function updateParallax() {
   const scrollY = window.scrollY;
   document.querySelectorAll(".parallax").forEach(el => {
     const speed = parseFloat(el.dataset.speed);
-    el.style.transform = `translate(-50%, ${scrollY * speed}px)`;
+    el.style.transform = `translate3d(-50%, ${scrollY * speed}px, 0)`;
   });
   ticking = false;
 }
@@ -48,7 +48,7 @@ window.addEventListener("scroll", () => {
     window.requestAnimationFrame(updateParallax);
     ticking = true;
   }
-}, { passive: true }); // ✅ important for mobile
+}, { passive: true });
 </script>
 
 
