--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <title>About Dario</title>
 <link rel="stylesheet" href="style.v2.css" />
   <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
 <body>
   <header class="navbar">
