--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Dario Tino</title>
 <link rel="stylesheet" href="style.v2.css" />
  <link rel="icon" type="image/png" href="favicon.png" />
+ <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
 <body>
   <header class="navbar">
