Apply frosted glass effect to project cards

--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects – Dario Tino</title>
-<link rel="stylesheet" href="style.v2.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dario Tino – Projects</title>
+  <link rel="stylesheet" href="style.v2.css" />
   <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
@@ -19,26 +19,32 @@
     </nav>
   </header>
 
-  <main style="padding: 100px 40px;">
-    <h1 style="margin-bottom: 40px;">Projects</h1>
+  <main class="projects-container">
 
-    <section class="project-list">
-
-      <div class="project-card">
-        <h2>Project Title 1</h2>
-        <p>A brief description of what this project is about, what tools you used, or why it’s cool.</p>
-        <a href="#" target="_blank">View Project</a>
+    <!-- Sindesi Card -->
+    <div class="project-card">
+      <div class="project-info">
+        <h2>Sindesi</h2>
+        <p>An innovative social app redefining meaningful online connections through shared context and presence.</p>
+        <a href="https://sindesi.app" class="project-btn" target="_blank">Visit Now</a>
       </div>
-
-      <div class="project-card">
-        <h2>Project Title 2</h2>
-        <p>Another project summary. You could link to GitHub, Figma, live site, etc.</p>
-        <a href="#" target="_blank">View Project</a>
+      <div class="project-logo">
+        <img src="link-logo.png" alt="Sindesi Logo">
       </div>
+    </div>
 
-      <!-- Add more projects as needed -->
+    <!-- Beskou Card -->
+    <div class="project-card reverse">
+      <div class="project-info">
+        <h2>Beskou</h2>
+        <p>A new era of creativity and tools for building future-forward branding — beautifully, simply, powerfully.</p>
+        <a href="https://beskou.com" class="project-btn" target="_blank">Visit Now</a>
+      </div>
+      <div class="project-logo">
+        <img src="beskou-logo.png" alt="Beskou Logo">
+      </div>
+    </div>
 
-    </section>
   </main>
 </body>
 </html>
