Apply frosted glass effect to project cards

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       <div class="project-info">
         <h2>Sindesi</h2>
         <p>An innovative social app redefining meaningful online connections through shared context and presence.</p>
-        <a href="https://sindesi.app" class="project-btn" target="_blank">Visit Now</a>
+        <a href="https://sindesi.ch" class="project-btn" target="_blank">Visit Now</a>
       </div>
       <div class="project-logo">
         <img src="link-logo.png" alt="Sindesi Logo">
@@ -37,7 +37,7 @@
     <div class="project-card reverse">
       <div class="project-info">
         <h2>Beskou</h2>
-        <p>A new era of creativity and tools for building future-forward branding — beautifully, simply, powerfully.</p>
+        <p>A new era of accessability tools - simply. powerfully.</p>
         <a href="https://beskou.com" class="project-btn" target="_blank">Visit Now</a>
       </div>
       <div class="project-logo">
