Update world page with styled photos and layout fixes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="about.html">ABOUT ME</a></li>
         <li><a href="projects.html">PROJECTS</a></li>
+        <li><a href="world.html">WORLD</a></li>
       </ul>
     </nav>
     <button id="theme-toggle">Dark / Light</button>
