--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="about.html">ABOUT ME</a></li>
         <li><a href="projects.html">PROJECTS</a></li>
+        <li><a href="world.html">WORLD</a></li>
       </ul>
     </nav>
   </header>
