Fix image filenames to lowercase jpg

--- a/world.html
+++ b/world.html
@@ -103,9 +103,9 @@
     <div class="card">
       <h2>🇺🇸 United States</h2>
       <div class="photos">
-        <img src="photos_usa/USA_1.jpg" alt="USA 1">
-        <img src="photos_usa/USA_2.jpg" alt="USA 2">
-        <img src="photos_usa/USA_3.jpg" alt="USA 3">
+        <img src="photos_usa/usa_1.jpg" alt="USA 1">
+        <img src="photos_usa/usa_2.jpg" alt="USA 2">
+        <img src="photos_usa/usa_3.jpg" alt="USA 3">
       </div>
     </div>
 
@@ -113,9 +113,9 @@
     <div class="card">
       <h2>🇨🇦 Canada</h2>
       <div class="photos">
-        <img src="photos_canada/Canada_1.jpg" alt="Canada 1">
-        <img src="photos_canada/Canada_2.jpg" alt="Canada 2">
-        <img src="photos_canada/Canada_3.jpg" alt="Canada 3">
+        <img src="photos_canada/canada_1.jpg" alt="Canada 1">
+        <img src="photos_canada/canada_2.jpg" alt="Canada 2">
+        <img src="photos_canada/canada_3.jpg" alt="Canada 3">
       </div>
     </div>
 
