--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <main class="about-container">
     <div class="about-text">
       <h1>Hi, my name is Dario.</h1>
-      <p>I'm a 20-year-old entrepreneur from the Principality of Liechtenstein. Passionate about innovation, technology, and making ideas real. I believe in building with purpose and thinking beyond borders. Since August 2024, I’ve been working at Apple — pushing boundaries and learning from the best in the industry.</p>
+      <p>I'm a 20-year-old entrepreneur from the Principality of Liechtenstein. Since the Summer of 2024, I've been very proudly working at Apple. There we believe in doing things with purpose, passion and dedication. And that's exactly my drive.</p>
     </div>
     <div class="about-image-wrapper">
       <img src="portrait.png" alt="Dario's photo" class="about-image" />
