Remove dark mode toggle and related code

--- a/index.html
+++ b/index.html
@@ -3,65 +3,168 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dario Tino</title>
-<link rel="stylesheet" href="style.v2.css" />
- <link rel="icon" type="image/png" href="favicon.png" />
- <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <title>Hey!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
+      font-family: 'Inter', sans-serif;
+    }
+
+    body {
+      background: url('sky1.jpg') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    /* === NAVBAR === */
+    .glass-nav {
+      position: fixed;
+      top: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow:
+        inset 0 2px 6px rgba(255, 255, 255, 0.1),
+        inset 0 -2px 4px rgba(0, 0, 0, 0.05),
+        0 10px 20px rgba(0, 0, 0, 0.05);
+      border-radius: 100px;
+      padding: 10px 24px;
+      display: flex;
+      gap: 28px;
+      z-index: 100;
+    }
+
+    .nav-link {
+      text-decoration: none;
+      color: rgba(0, 0, 0, 0.75);
+      font-size: 1rem;
+      font-weight: 400;
+      position: relative;
+      padding: 4px 12px;
+      transition: color 0.2s ease;
+    }
+
+    .nav-link:hover {
+      color: rgba(0, 0, 0, 1);
+    }
+
+    .nav-link.active {
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 24px;
+      box-shadow:
+        inset 0 1px 2px rgba(255, 255, 255, 0.12),
+        inset 0 -1px 2px rgba(0, 0, 0, 0.05),
+        0 2px 6px rgba(0, 0, 0, 0.04);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .nav-link.active::before {
+      content: '';
+      position: absolute;
+      top: 2px;
+      left: 4px;
+      width: 24%;
+      height: 40%;
+      background: radial-gradient(ellipse at top left, rgba(255, 255, 255, 0.3), transparent 60%);
+      border-radius: 50%;
+      filter: blur(3px);
+      pointer-events: none;
+    }
+
+    /* === BUBBLE === */
+    .water-drop {
+      position: relative;
+      display: inline-block;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 100px;
+      padding: 40px 60px;
+      text-align: center;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow:
+        inset 0 5px 12px rgba(255, 255, 255, 0.15),
+        inset 0 -5px 10px rgba(0, 0, 0, 0.1),
+        0 20px 40px rgba(0, 0, 0, 0.08);
+      background-clip: padding-box;
+    }
+
+    .water-drop::before {
+      content: '';
+      position: absolute;
+      top: 10%;
+      left: 10%;
+      width: 60%;
+      height: 40%;
+      background: radial-gradient(ellipse at top left, rgba(255, 255, 255, 0.4), transparent 70%);
+      border-radius: 50%;
+      filter: blur(6px);
+      pointer-events: none;
+    }
+
+    h1 {
+      font-size: 3rem;
+      font-weight: 600;
+      color: rgba(0, 0, 0, 0.8);
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.25rem;
+      font-weight: 400;
+      color: rgba(0, 0, 0, 0.7);
+    }
+
+    @media (max-width: 600px) {
+      .glass-nav {
+        gap: 16px;
+        padding: 8px 16px;
+        font-size: 0.9rem;
+      }
+
+      .nav-link {
+        padding: 4px 8px;
+      }
+
+      .water-drop {
+        padding: 40px 20px;
+      }
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-  <header class="navbar">
-    <div class="logo"><a href="index.html">DARIO TINO</a></div>
-    <nav>
-      <ul>
-        <li><a href="about.html">ABOUT ME</a></li>
-        <li><a href="projects.html">PROJECTS</a></li>
-        <li><a href="world.html">WORLD</a></li>
-      </ul>
-    </nav>
-    <button id="theme-toggle">Dark / Light</button>
-  </header>
-<main class="parallax-container">
-  <img src="link-logo.png" class="parallax logo-1" data-speed="0.2" />
-  <img src="@apple-logo.png" class="parallax logo-2" data-speed="0.4" />
-  <img src="beskou-logo.png" class="parallax logo-3" data-speed="0.6" />
-</main>
 
+  <!-- NAVBAR -->
+  <nav class="glass-nav">
+    <a href="index.html" class="nav-link active">Hey!</a>
+    <a href="world.html" class="nav-link">World</a>
+    <a href="about.html" class="nav-link">Story</a>
+    <a href="projects.html" class="nav-link">Projects</a>
+  </nav>
 
-
-
-
-<!-- Add this to make the page scrollable -->
-<div style="height: 60vh;"></div>
-
-
-<script>
-let ticking = false;
-
-function updateParallax() {
-  const scrollY = window.scrollY;
-  document.querySelectorAll(".parallax").forEach(el => {
-    const speed = parseFloat(el.dataset.speed);
-    el.style.transform = `translate(-50%, ${scrollY * speed}px)`;
-  });
-  ticking = false;
-}
-
-window.addEventListener("scroll", () => {
-  if (!ticking) {
-    window.requestAnimationFrame(updateParallax);
-    ticking = true;
-  }
-}, { passive: true });
-
-// ✅ Call once on page load to apply transform immediately
-window.addEventListener("DOMContentLoaded", updateParallax);
-
-  const toggleBtn = document.getElementById('theme-toggle');
-
-  toggleBtn.addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-  });
-</script>
+  <!-- BUBBLE CONTENT -->
+  <div class="water-drop">
+    <h1>Welcome</h1>
+    <p>Breathe deep. Let your ideas float.</p>
+  </div>
 
 </body>
 </html>
