--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
       box-sizing: border-box;
     }
 
-    html, body {
-      height: 100%;
-      font-family: 'Inter', sans-serif;
-    }
+html, body {
+  height: 100%;
+  font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+}
+
 
     body {
       background: url('sky1.jpg') no-repeat center center fixed;
@@ -28,23 +30,27 @@
     }
 
     /* === NAVBAR === */
-    .glass-nav {
-      position: fixed;
-      top: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow:
-        inset 0 2px 6px rgba(255, 255, 255, 0.1),
-        inset 0 -2px 4px rgba(0, 0, 0, 0.05),
-        0 10px 20px rgba(0, 0, 0, 0.05);
-      border-radius: 100px;
-      padding: 10px 12px;
-      display: flex;
-      gap: 28px;
-      z-index: 100;
-    }
+.glass-nav {
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  gap: 28px;
+  padding: 10px 12px;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 100px;
+  box-shadow:
+    inset 0 2px 6px rgba(255, 255, 255, 0.1),
+    inset 0 -2px 4px rgba(0, 0, 0, 0.05),
+    0 10px 20px rgba(0, 0, 0, 0.05);
+  backdrop-filter: blur(6px);
+  z-index: 10;
+}
+
+
 
     .nav-link {
       text-decoration: none;
@@ -148,6 +154,26 @@
         font-size: 1rem;
       }
     }
+
+    body {
+  position: relative;
+  z-index: 1;
+  background: transparent;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('sky1.jpg') no-repeat center center;
+  background-size: cover;
+  z-index: -1;
+  pointer-events: none;
+}
+
   </style>
 </head>
 <body>
@@ -165,6 +191,7 @@
     <h1>Welcome</h1>
     <p>Breathe deep. Let your ideas float.</p>
   </div>
+
 
 </body>
 </html>
