--- a/world.html
+++ b/world.html
@@ -11,14 +11,13 @@
       padding: 0;
       box-sizing: border-box;
     }
+    
+html, body {
+  height: 100%;
+  font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+}
 
-    html, body {
-      height: 100%;
-      font-family: 'Inter', sans-serif;
-      background: url('sky1.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #000;
-    }
 
     body {
       display: flex;
@@ -28,23 +27,23 @@
     }
 
     /* === NAVBAR === */
-    .glass-nav {
-      position: fixed;
-      top: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow:
-        inset 0 2px 6px rgba(255, 255, 255, 0.1),
-        inset 0 -2px 4px rgba(0, 0, 0, 0.05),
-        0 10px 20px rgba(0, 0, 0, 0.05);
-      border-radius: 100px;
-      padding: 10px 12px;
-      display: flex;
-      gap: 28px;
-      z-index: 1000;
-    }
+.glass-nav {
+  margin: 0 auto; /* centers it horizontally */
+  display: flex;
+  justify-content: center;
+  gap: 28px;
+  padding: 10px 12px;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 100px;
+  box-shadow:
+    inset 0 2px 6px rgba(255, 255, 255, 0.1),
+    inset 0 -2px 4px rgba(0, 0, 0, 0.05),
+    0 10px 20px rgba(0, 0, 0, 0.05);
+  backdrop-filter: blur(6px);
+  max-width: fit-content;
+}
+
 
     .nav-link {
       text-decoration: none;
@@ -150,6 +149,26 @@
         grid-template-columns: 1fr;
       }
     }
+
+    body {
+  position: relative;
+  z-index: 1;
+  background: transparent;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('sky1.jpg') no-repeat center center;
+  background-size: cover;
+  z-index: -1;
+  pointer-events: none;
+}
+
   </style>
 </head>
 <body>
@@ -287,5 +306,6 @@
     </div>
 
   </div>
+  
 </body>
 </html>
