--- a/about.html
+++ b/about.html
@@ -15,40 +15,57 @@
       box-sizing: border-box;
     }
 
-html, body {
-  height: 100%;
-  font-family: 'Inter', sans-serif;
-  overflow-x: hidden;
-}
-
+    html, body {
+      height: 100%;
+      font-family: 'Inter', sans-serif;
+      overflow-x: hidden;
+    }
 
     body {
-      padding-top: 120px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
       text-align: center;
+      background: transparent;
+      position: relative;
+      z-index: 1;
+    }
+
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('sky1.jpg') no-repeat center center;
+      background-size: cover;
+      z-index: -1;
+      pointer-events: none;
     }
 
     /* === NAVBAR === */
-.glass-nav {
-  margin: 0 auto; /* centers it horizontally */
-  display: flex;
-  justify-content: center;
-  gap: 28px;
-  padding: 10px 12px;
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 100px;
-  box-shadow:
-    inset 0 2px 6px rgba(255, 255, 255, 0.1),
-    inset 0 -2px 4px rgba(0, 0, 0, 0.05),
-    0 10px 20px rgba(0, 0, 0, 0.05);
-  backdrop-filter: blur(6px);
-  max-width: fit-content;
-}
-
+    .glass-nav {
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      gap: 28px;
+      padding: 10px 12px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 100px;
+      box-shadow:
+        inset 0 2px 6px rgba(255, 255, 255, 0.1),
+        inset 0 -2px 4px rgba(0, 0, 0, 0.05),
+        0 10px 20px rgba(0, 0, 0, 0.05);
+      backdrop-filter: blur(6px);
+      max-width: fit-content;
+    }
 
     .nav-link {
       text-decoration: none;
@@ -94,7 +111,7 @@ html, body {
       justify-content: center;
       align-items: center;
       max-width: 1000px;
-      margin: 0 auto;
+      margin: 160px auto 0; /* pushed down to clear navbar */
       padding: 2rem;
       gap: 2rem;
     }
@@ -139,15 +156,17 @@ html, body {
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
     }
 
-    @media (max-width: 768px) {
-      .about-container {
-        flex-direction: column;
-        padding: 1.5rem;
-      }
+@media (max-width: 768px) {
+  .about-container {
+    display: block;
+    padding: 1.5rem;
+    margin-top: 140px;
+  }
 
-      .about-text {
-        padding: 1.5rem;
-      }
+  .about-text {
+    padding: 1.5rem;
+  }
+}
 
       .about-text h1 {
         font-size: 2rem;
@@ -156,27 +175,7 @@ html, body {
       .about-text p {
         font-size: 1rem;
       }
-    }
-
-    body {
-  position: relative;
-  z-index: 1;
-  background: transparent;
-}
-
-body::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('sky1.jpg') no-repeat center center;
-  background-size: cover;
-  z-index: -1;
-  pointer-events: none;
-}
-
+    
   </style>
 </head>
 <body>
