--- a/projects.html
+++ b/projects.html
@@ -15,38 +15,55 @@
       box-sizing: border-box;
     }
 
-html, body {
-  height: 100%;
-  font-family: 'Inter', sans-serif;
-  overflow-x: hidden;
-}
-
+    html, body {
+      height: 100%;
+      font-family: 'Inter', sans-serif;
+      overflow-x: hidden;
+    }
 
     body {
-      padding-top: 120px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      position: relative;
+      z-index: 1;
+      background: transparent;
+    }
+
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('sky1.jpg') no-repeat center center;
+      background-size: cover;
+      z-index: -1;
+      pointer-events: none;
     }
 
     /* === NAVBAR === */
-.glass-nav {
-  margin: 0 auto; /* centers it horizontally */
-  display: flex;
-  justify-content: center;
-  gap: 28px;
-  padding: 10px 12px;
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 100px;
-  box-shadow:
-    inset 0 2px 6px rgba(255, 255, 255, 0.1),
-    inset 0 -2px 4px rgba(0, 0, 0, 0.05),
-    0 10px 20px rgba(0, 0, 0, 0.05);
-  backdrop-filter: blur(6px);
-  max-width: fit-content;
-}
-
+    .glass-nav {
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      gap: 28px;
+      padding: 10px 12px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 100px;
+      box-shadow:
+        inset 0 2px 6px rgba(255, 255, 255, 0.1),
+        inset 0 -2px 4px rgba(0, 0, 0, 0.05),
+        0 10px 20px rgba(0, 0, 0, 0.05);
+      backdrop-filter: blur(6px);
+      max-width: fit-content;
+    }
 
     .nav-link {
       text-decoration: none;
@@ -89,6 +106,7 @@ html, body {
     .projects-container {
       width: 100%;
       max-width: 1000px;
+      margin-top: 160px;
       padding: 2rem;
       display: flex;
       flex-direction: column;
@@ -145,24 +163,22 @@ html, body {
       background: rgba(255, 255, 255, 0.2);
     }
 
-.project-logo {
-  flex: 1 1 260px; /* give it more weight */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 12px; /* optional */
-}
+    .project-logo {
+      flex: 1 1 260px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 12px;
+    }
 
-
-.project-logo img {
-  width: 240px; /* ← direct fixed size */
-  max-width: none;
-  height: auto;
-  border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
+    .project-logo img {
+      width: 240px;
+      max-width: none;
+      height: auto;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
 
     @media (max-width: 768px) {
       .projects-container {
@@ -187,26 +203,6 @@ html, body {
         font-size: 1rem;
       }
     }
-
-    body {
-  position: relative;
-  z-index: 1;
-  background: transparent;
-}
-
-body::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('sky1.jpg') no-repeat center center;
-  background-size: cover;
-  z-index: -1;
-  pointer-events: none;
-}
-
   </style>
 </head>
 <body>
